<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Client Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="serverIP">Server IP</string>
    <string name="disconect">Disconnect</string>
    <string name="portNumber">Port</string>
    <string name="refreshInterval">Refresh Interval</string>
    <string name="delayTimeInfo">10</string>
    <string name="find">Find</string>
    <string name="serverIp">Server IP</string>
    <string name="port">Port</string>
    <string name="change">Change</string>
    <string name="calibrate">Calibrate</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tcp_client">TcpClientActivity</string>
    <string name="delay">Send Delay</string>
    <string name="delayTime">10</string>

</resources>
